SOlved versions conflicts

--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -84,7 +84,7 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav me-auto">
         <li class="nav-item">
-          <a class="nav-link explore" href="/list">Explore</a>
+          <a class="nav-link explore" href="/list">ExloreEase</a>
         </li>
       </ul>
       <form
